# Sdl-Engine

./: .gitmodules  CMakeLists.txt  Sdl-Engine.sln  build.bat  build.py  gen.bat  gen.py  premake.bat  premake5.lua
.github/workflows/: msbuild.yml
Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  Todo.txt  premake5.lua
Core/include/SdlEngine/: Collider.h  PhysicsObject.h  TextureManager.h  Vector2.h  draw.h  gameloop.h  test.h  window.h
Core/include/SdlEngine/EMS/: Entity.h  EntityManager.h  wEntity.h
Core/include/SdlEngine/Renderer/: OpenGLRenderer.h  ShaderLoader.h  texturemanager.h
Core/include/SdlEngine/utils/: JSON.h
Core/src/: PhysicsObject.cpp  TextureManager.cpp  draw.cpp  gameloop.cpp  test.cpp  window.cpp
Core/src/EMS/: Entity.cpp  EntityManager.cpp
Core/src/Renderer/: OpenGLRenderer.cpp  ShaderLoader.cpp  texturemanager.cpp
Core/src/utils/: JSON.cpp
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  imgui.ini  premake5.lua
Engine/assets/shaders/: test.frag  test.vert
Engine/imgui/: imgui_draw.cpp  imgui_freetype.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp
Engine/include/Engine/: utils.h
Engine/include/Engine/App/: Application.h  ImGuiHelper.h  ImGuiManager.h  UI.h  Ui.h
Engine/include/Engine/App/Imgui/: ImGuiHelper.h
Engine/include/Engine/EMS/: Entity.h  EntityManager.h
Engine/include/Engine/GameLogic/: Camera.h  GameWorld.h  Grid.h
Engine/include/Engine/Input/: InputDefinitions.h  InputManager.h
Engine/include/Engine/Rendering/: Camera.h  Renderer.h
Engine/src/: Engine.cpp  main.cpp  utils.cpp
Engine/src/App/: Application.cpp  ImGuiHelper.cpp  ImGuiManager.cpp  UI.cpp  Ui.cpp
Engine/src/App/Imgui/: ImGuiHelper.cpp
Engine/src/EMS/: Entity.cpp  EntityManager.cpp
Engine/src/GameLogic/: GameWorld.cpp  Grid.cpp
Engine/src/Input/: InputManager.cpp
Engine/src/Rendering/: Renderer.cpp
Engine/src/imgui/: imgui_draw.cpp
Game/: Game.vcxproj  Game.vcxproj.filters  packet_assets.pak  premake5.lua  window_settings.json
Game/include/: gameloop.h  player.h
Game/src/: game.cpp  main.cpp  player.cpp
Game/src/src/: game.cpp  gameloop.h
Interface/: CMakeLists.txt  Interface.vcxproj  Interface.vcxproj.filters  premake5.lua
vendors/: Core.idb  Core.lib  Interface.idb  Interface.lib
